--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@
 /* loading */
 .loadingWrap {opacity: 0; position: fixed; top: 0; left: 0; right: 0; bottom: 0; z-index: 100; background: #fff;
 	transition: 0.5s;}
-.loading {position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%) rotate(0); width: 48px; height: 48px; border: 5px solid #333; border-bottom-color: transparent; border-radius: 50%; display: inline-block; box-sizing: border-box; animation: rotation 1s linear infinite;}
+.loading {position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%) rotate(0); width: 3rem; height: 3rem; border: 50.3125rem solid #333; border-bottom-color: transparent; border-radius: 50%; display: inline-block; box-sizing: border-box; animation: rotation 1s linear infinite;}
 .beforeLoad .loadingWrap {opacity: 1;}
 
 /* moveCareer */
@@ -39,21 +39,26 @@
 .moveCareer {opacity: 0; transform: translateY(30px); position: relative; display: inline-block; margin-top: 4rem; padding: 1rem 1.75rem 1rem 0; font-size: 1.25rem; background: url(../images/ico/ico_arr_right_circle.png) no-repeat center right / 1.25rem; transition: .5s;}
 .moveCareer::after {content: ''; position: absolute; bottom: 0; left: 0; width: 100%; height: 1px; transform: scaleX(0); transform-origin: 100% 50%; transition: transform .4s cubic-bezier(.2,1,.8,1) .1s; background: #222;}
 .moveCareer:hover::after {transform: scaleX(1); transform-origin: 0 50%; transition-timing-function: cubic-bezier(.7,0,.2,1);}
-.moveCareer + .moveCareer {margin-left: 40px;}
+.moveCareer + .moveCareer {margin-left: 2.5rem;}
 
 /*** SECTION ***/
 /* main */
 .main {position: relative; z-index: 3;}
 .main .mainInner {padding: calc(10dvh + 10rem) 4.615vw 17dvh;}
 .main .mainTitBox {text-align: center;}
-.main .mainTitBox img {animation: btmToUp .5s ease-in-out forwards;}
-.main .mainTitBox .mainTxt {opacity: 0; margin: 10dvh 0 12dvh; animation: btmToUp .5s .15s ease-in-out forwards;}
+.main .mainTitBox img {opacity: 0; transform: translateY(30px); transition: .35s;}
+.main .mainTitBox .mainTxt {opacity: 0; margin: 10dvh 0 12dvh; transform: translateY(30px); transition: .35s;}
 .main .mainTitBox .mainTxt span {display: block; line-height: 2; font-size: 1.375rem; color: #5e5e5e;}
-.main .keepScroll {opacity: 0; position: relative; text-align: center; animation: btmToUp .5s .3s ease-in-out forwards;}
+.main .keepScroll {opacity: 0; position: relative; text-align: center; transition: .35s;}
 .main .keepScroll .txtBox {margin-bottom: 0.625rem;}
 .main .keepScroll .txtBox span {font-size: 0.875rem; color: #999;}
 .main .keepScroll .txtBox span.scrolling {opacity: 0; position: absolute; top: 0; left: 50%;transform: translateX(-50%);}
 .main .mainBgTxt {display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100dvh; background: url(../images/txt/txt_jin.svg) repeat-x center top calc(3dvh + 18rem) / 25% auto; pointer-events: none; user-select: none; animation: scrollRepeatX 30s linear infinite;}
+
+/* main : active */
+.main .mainInner.active .mainTitBox img {opacity: 1; transform: translateY(0);} 
+.main .mainInner.active .mainTitBox .mainTxt {opacity: 1; transform: translateY(0); transition-delay: .15s;} 
+.main .mainInner.active .keepScroll {opacity: 1; transform: translateY(0); transition-delay: .3s;} 
 
 /* about */
 .about {position: relative; padding: 0 1.25rem; background: #faf7f5; z-index: 2;}
@@ -95,7 +100,7 @@
 .experience .experienceInner .works .workItem .workContents .workInfo .workSkills .skill + .skill {margin-left: 0.625rem;}
 .experience .experienceInner .works .workItem .workContents .workInfo .with {font-size: 1.0625rem; color: #808080;}
 .experience .experienceInner .works .workItem.ongoing .itemCard::before {content: ''; position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: rgba(255,255,255,0.3);}
-.experience .experienceInner .works .workItem.ongoing .itemCard::after {content: 'Ongoing'; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); padding: 0.375rem 1rem; background: #fff; border-radius: 1.25rem; box-shadow: 0px 0px 10px 5px rgba(0,0,0,0.1);}
+.experience .experienceInner .works .workItem.ongoing .itemCard::after {content: 'Ongoing'; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); padding: 0.375rem 1rem; background: #fff; border-radius: 1.25rem; box-shadow: 0 0 0.625rem 0.3125rem rgba(0,0,0,0.1);}
 .experience .experienceInner .works .workItem.ongoing .workContents {opacity: 0.4;}
 
 /* hire */
@@ -108,9 +113,9 @@
 .hire .hireInner .hireTit .subTit span .focus {font-weight: bold; color: #000;}
 .hire .hireInner .hireTit .descBox {opacity: 0; transform: translateY(30px); display: flex; gap: 2.5rem; margin-top: 2.5rem; transition: .25s;}
 .hire .footer {position: absolute; bottom: 2.5rem; left: 0; right: 0; text-align: center;}
-.hire .footer .copyright {font-size: 14px; color: #a9a9a9; letter-spacing: 1px;}
+.hire .footer .copyright {font-size: 0.875rem; color: #a9a9a9; letter-spacing: 1px;}
 .hire .footer .copyright .madeby .focus {color: #666; font-weight: bold;}
-.hire .footer .copyright .email {display: block; width: fit-content; margin: 8px auto 0;}
+.hire .footer .copyright .email {display: block; width: fit-content; margin: 0.5rem auto 0;}
 
 /* workDetail */
 .workDetail {padding-top: 15rem;}
@@ -120,9 +125,10 @@
 .workDetail.roumit .workInfo .workIcon {background: #b8e1ff;}
 .workDetail.semorApp .workInfo .workIcon {background: #525e9c;}
 .workDetail.semorPc .workInfo .workIcon {background: #fff7da;}
-.workDetail.webcash .workInfo .workIcon {background: #232d64;}
+.workDetail.partner .workInfo .workIcon {background: #232d64;}
 .workDetail .workInfo .workSummary .summaryTop {margin-bottom: 2.75rem;}
 .workDetail .workInfo .workSummary .summaryTop .workTit {margin-top: 1rem; font-size: 4rem; line-height: 1.5;}
+.workDetail .workInfo .workSummary .summaryTop .contribution {margin-top: 0.625rem; font-size: 1.25rem; color: #a5a5a5;}
 .workDetail .workInfo .workSummary .summaryBottom .workSkills {display: flex; margin-bottom: 1.25rem;}
 .workDetail .workInfo .workSummary .summaryBottom .workSkills .skill {position: relative; font-size: 1.125rem; color: #999;}
 .workDetail .workInfo .workSummary .summaryBottom .workSkills .skill + .skill {margin-left: 0.625rem;}
@@ -130,35 +136,21 @@
 .workDetail .workInfo .workSummary .summaryBottom .desc p {font-size: 1.25rem; line-height: 1.5; color: #4e4e4e;}
 .workDetail .workInfo .workSummary .summaryBottom .desc p + p {margin-top: 1rem;}
 .workDetail .workPreview {max-width: 150.625rem; margin: 0 auto 5rem; padding: 5.625rem 3.75rem 0;}
-.workDetail .workPreview .thum {position: relative;}
+.workDetail .workPreview .thum {position: relative; min-height: 43.75rem;}
 .workDetail .workPreview .thum video,
 .workDetail .workPreview .thum img {width: 100%; height: 100%; object-fit: cover; border: 1px solid #999; border-radius: 1.875rem;}
 .workDetail .workPreview .desc {margin-top: 1.25rem;}
 .workDetail .workPreview .desc p {font-size: 1.125rem; line-height: 1.5;}
+.workDetail .workPreview .fullContents .thum {height: 80vh; max-height: 75rem;}
 .workDetail .workPreview .flexContents {display: flex; margin-top: 5rem; gap: 3.75rem;}
-.workDetail .workPreview .flexContents .thum {width: 100%; height: 700px;}
+.workDetail .workPreview .flexContents .thum {width: 100%; height: 43.75rem;}
 .workDetail .workPreview .flexContents .left {width: 40%;}
 .workDetail .workPreview .flexContents .right {width: 60%;}
 .workDetail .hire .hireInner .hireTit .secTit,
 .workDetail .hire .hireInner .hireTit .subTit,
 .workDetail .hire .hireInner .hireTit .descBox {opacity: 1;}
 
-@media screen and (max-width: 600px) {
-  /* header */
-  .header .headerInner .headerTop {justify-content: center;}
-  .header .headerInner .headerTop .pageTitle {display: none;}
-  .header .headerInner .headerTop .status {display: none;}
-  .header .headerInner .headerBottom {text-align: center;}
-
-  /* experience */
-  .experience .experienceInner .works .workItem:nth-of-type(4n+1) {width: 100%;}
-  .experience .experienceInner .works .workItem:nth-of-type(4n+2) {width: 100%;}
-  .experience .experienceInner .works .workItem:nth-of-type(4n+3) {width: 100%;}
-  .experience .experienceInner .works .workItem:nth-of-type(4n+4) {width: 100%;}
-  .experience .experienceInner .works .workItem .itemCard {width: 100%;}
-  .experience .experienceInner .works .workItem .itemCard img {width: 65%;}
-}
-
+/* Media Query */
 @media screen and (max-width: 767px) {
   html,body {font-size: 12.8px;}
 
@@ -185,10 +177,33 @@
   .workDetail .workInfo .workSummary .summaryTop .workTit {font-size: 28px;}
   .workDetail .workInfo .workSummary .summaryBottom .moveCareer {margin-top: 20px;}
   .workDetail .workPreview {padding: 80px 20px 0;}
+  .workDetail .workPreview .thum {min-height: 400px;}
+  .workDetail .workPreview .fullContents .thum {height: 400px;}
   .workDetail .workPreview .flexContents {display: block; margin-top: 40px;}
-  .workDetail .workPreview .flexContents .thum {height: auto;}
+  .workDetail .workPreview .flexContents .thum {height: 400px;}
   .workDetail .workPreview .flexContents .left,
   .workDetail .workPreview .flexContents .right {width: 100%; margin-top: 40px;}
+}
+
+@media screen and (max-width: 600px) {
+  /* header */
+  .header .headerInner .headerTop {justify-content: center;}
+  .header .headerInner .headerTop .pageTitle {display: none;}
+  .header .headerInner .headerTop .status {display: none;}
+  .header .headerInner .headerBottom {text-align: center;}
+
+  /* experience */
+  .experience .experienceInner .works .workItem:nth-of-type(4n+1) {width: 100%;}
+  .experience .experienceInner .works .workItem:nth-of-type(4n+2) {width: 100%;}
+  .experience .experienceInner .works .workItem:nth-of-type(4n+3) {width: 100%;}
+  .experience .experienceInner .works .workItem:nth-of-type(4n+4) {width: 100%;}
+  .experience .experienceInner .works .workItem .itemCard {width: 100%;}
+  .experience .experienceInner .works .workItem .itemCard img {width: 65%;}
+
+  /* workDetail */
+  .workDetail .workPreview .thum {min-height: 330px;}
+  .workDetail .workPreview .fullContents .thum {height: 330px;}
+  .workDetail .workPreview .flexContents .thum {height: 330px;}
 }
 
 @media screen and (max-width: 870px) {
@@ -230,8 +245,10 @@
   .hire .hireInner .hireTit .descBox .descItem .descTxt {display: inline;}
 
   /* workDetail */
+  .workDetail {padding-top: 150px;}
   .workDetail .workInfo {display: block;}
   .workDetail .workInfo .workIcon {margin: 0 auto 60px;}
+  .workDetail .workPreview .fullContents .thum {height: 40vh;}
   .workDetail .workPreview .flexContents {display: block;}
   .workDetail .workPreview .flexContents .left,
   .workDetail .workPreview .flexContents .right {width: 100%; margin-top: 80px;}
@@ -255,11 +272,12 @@
   .hire .hireInner .hireTit .descBox .descItem {margin-top: 40px;}
 
   /* workDetail */
+  .workDetail {padding-top: 150px;}
   .workDetail .workInfo {display: block;}
   .workDetail .workInfo .workIcon {margin: 0 auto 60px;}
-  .workDetail .workPreview .flexContents {display: block;}
+  .workDetail .workPreview .fullContents .thum {height: 50vh;}
   .workDetail .workPreview .flexContents .left,
-  .workDetail .workPreview .flexContents .right {width: 100%; margin-top: 80px;}
+  .workDetail .workPreview .flexContents .right {width: 100%;}
 }
 
 @media (min-width: 1301px) and (max-width: 1400px) {
