--- a/css/style.css
+++ b/css/style.css
@@ -29,9 +29,8 @@
 .show {opacity: 1 !important; transform: translateY(0) !important;}
 
 /* loading */
-.loadingWrap {opacity: 0; position: fixed; top: 0; left: 0; right: 0; bottom: 0; z-index: 100; background: #fff;
-	transition: 0.5s;}
-.loading {position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%) rotate(0); width: 3rem; height: 3rem; border: 50.3125rem solid #333; border-bottom-color: transparent; border-radius: 50%; display: inline-block; box-sizing: border-box; animation: rotation 1s linear infinite;}
+.loadingWrap {opacity: 0; position: fixed; top: 0; left: 0; right: 0; bottom: 0; z-index: 100; background: #fff; transition: 0.5s;}
+.loading {position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%) rotate(0); width: 3rem; height: 3rem; border: 0.3125rem solid #333; border-bottom-color: transparent; border-radius: 50%; display: inline-block; box-sizing: border-box; animation: rotation 1s linear infinite;}
 .beforeLoad .loadingWrap {opacity: 1;}
 
 /* moveCareer */
